--- a/index.html
+++ b/index.html
@@ -8,26 +8,32 @@
 </head>
 <body>
   <main>
-    <section>
+    <section id="sedans">
+      <img src="./images/icon-sedans.svg" alt="sedan">
       <h2>Sedans</h2>
       <p>
         Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
         or on your next road trip.
       </p>
+      <button>Learn More</button>
     </section>
-    <section>
+    <section id="suvs">
+      <img src="./images/icon-suvs.svg" alt="suvs">
       <h2>SUVs</h2>
       <p>
         Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
         and off-road adventures.
       </p>
+      <button>Learn More</button>
     </section>
-    <section>
+    <section id="luxury">
+      <img src="./images/icon-luxury.svg" alt="luxury">
       <h2>Luxury</h2>
       <p>
         Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
         rental and arrive in style.
       </p>
+      <button>Learn More</button>
     </section>
   </main>
 </body>
